[tool.poetry]
name = "qa-guru-python-9-18"
version = "0.1.0"
description = ""
authors = ["Sergey Dobrovolskiy <21102027+vinterbris@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.4.4"
selene = "2.0.0rc6"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
