[tool.poetry]
name = "qa_guru_python_9_18"
version = "0.1.0"
description = ""
authors = ["Sergey Dobrovolskiy <21102027+vinterbris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.4.4"
selene = "2.0.0rc6"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
